--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
                             </g>
                         </svg>
                         Download
+                            </div>
     </div>
 </div>
                 
