--- a/index.html
+++ b/index.html
@@ -156,9 +156,9 @@
         <!-- Logo and title -->
         <img class="shop__icon" src="./assets/img/logo.png" width="58" height="68" alt="Shop Logo">
         <h2 class="shop__card__title">KXZ EXTERNAL [FIVEM]</h2>
-        <p class="shop__card__description">BEST UNDETECTED FIVEM PVP CHEAT</p>
+        <p class="shop__card__description">BEST CHEAP UNDETECTED FIVEM PVP CHEAT</p>
                     <p class="shop__card__price">Starting at <span>0.00$</span></p>
-                    <div class="shop__card__purchase" onclick="window.location.href='./dashboard'">
+                    <div class="shop__card__purchase" onclick="window.location.href='https://kxz.mysellauth.com/product/kxz-external'">
                         <svg class="shop__card__icon" xmlns="http://www.w3.org/2000/svg" width="16.586" height="17.624" viewBox="0 0 15.586 16.624">
                             <g id="shopping-bag" transform="translate(1 1)">
                                 <path id="Path_3" data-name="Path 3" d="M5.194,2,3,4.925V15.161a1.462,1.462,0,0,0,1.462,1.462H14.7a1.462,1.462,0,0,0,1.462-1.462V4.925L13.968,2Z" transform="translate(-2.575 -2)" fill="none" stroke="#0070ff" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"/>
@@ -166,7 +166,7 @@
                                 <path id="Path_4" data-name="Path 4" d="M13.849,10A2.925,2.925,0,0,1,8,10" transform="translate(-3.92 -4.151)" fill="none" stroke="#0070ff" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"/>
                             </g>
                         </svg>
-                        Download
+                        Purchase
                             </div>
     </div>
 </div>
