--- a/index.html
+++ b/index.html
@@ -184,9 +184,7 @@
 <button
   class="shop__card__purchase"
   type="button"
-  onclick="window.sellAuthEmbed.checkout(this, { cart: [{ productId: 	
-103970, variantId: 153707, quantity: 1 }], shopId: 102318, modal: true })"
->
+  onclick="window.sellAuthEmbed.checkout(this, { cart: [{ productId: 314375, variantId: 430220, quantity: 1 }], shopId: 105400, modal: true })">
             <svg class="shop__card__icon" xmlns="http://www.w3.org/2000/svg" width="16.586" height="17.624" viewBox="0 0 15.586 16.624">
                 <g id="shopping-bag" transform="translate(1 1)">
                     <path id="Path_3" data-name="Path 3" d="M5.194,2,3,4.925V15.161a1.462,1.462,0,0,0,1.462,1.462H14.7a1.462,1.462,0,0,0,1.462-1.462V4.925L13.968,2Z" transform="translate(-2.575 -2)" fill="none" stroke="#0070ff" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"/>
